[package]
name = "MarriedPiercingStrings"
version = "0.1.0"
authors = ["repl.it user <replituser@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

[[bin]]
name = "MarriedPiercingStrings"
path = "main.rs"

